rendered/envs/alpha/vmks/ingressroute-vmsingle-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmsingle-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vmsingle.zebradil.dev`) || Host(`vmsingle.gray.zebradil.dev`) || Host(`vmsingle.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: vmsingle-vmks
          port: http
